syntax="proto3";
option java_multiple_files = true; //
package com.zscengiz.grpc;


service DiscountService {
  rpc getDiscount(DiscountRequest) returns (DiscountResponse); //stream değil, biz unary yapıyoruz o yüzden böyle
  rpc getAllDiscount(Empty) returns (DiscountListResponse);
}

message DiscountRequest {
  string code = 1;
  float price = 2;
  int64 externalCategoryId = 3;
}

message DiscountResponse {
  string code = 1;
  float newPrice = 2;
  float oldPrice = 3;
  Response response = 4;
}

message Empty {}

message DiscountType {
  int64 id = 1;
  string code = 2;
  float discountPrice = 3;
}

message DiscountListResponse {
  repeated DiscountType discounts = 1;
}

message Response {
  bool statusCode = 1;
  string message = 2;
}

